syntax = "proto3";

package mapreduce;
import public "google/protobuf/timestamp.proto";

option go_package = "./;proto";

message File {
	string FileName = 1;
	string Content =2;
}

message Task {
  int64 TaskStage = 1;               // 任务的阶段
  int64 TaskId = 2;                  // 任务的id
  int64 ReduceNum = 3;               // reduce个数
  repeated string Intermediates = 4; // Reduce时的临时文件
  string FileName = 5;               // 文件名称
  google.protobuf.Timestamp StartTime  = 6;     //开始时间
}

message GetTaskArgs {

}

message GetTaskReply { 
  Task Task = 1; 
}

// 通知完成任务
message CompleteTaskArgs {
  int64 TaskId = 1;
  int64 Stage = 2;
  repeated string FilePaths = 3;
}

message CompleteTaskReply {
  
}

service MapReduce {
  rpc AssignTask(GetTaskArgs) returns (GetTaskReply);
  rpc CompleteTask(CompleteTaskArgs) returns (CompleteTaskReply);
}